--- a/PG3 (Kamata Engen).vcxproj.filters
+++ b/PG3 (Kamata Engen).vcxproj.filters
@@ -53,6 +53,15 @@
     <ClCompile Include="GameManager.cpp">
       <Filter>KamataEngine</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="comand.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="InputHandle.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\KamataEngine\DirectXGame\audio\Audio.h">
@@ -131,5 +140,8 @@
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="ClearScene.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="comand.h" />
+    <ClInclude Include="InputHandle.h" />
   </ItemGroup>
 </Project>
